--- a/pauline's-date/.godot/editor/editor_layout.cfg
+++ b/pauline's-date/.godot/editor/editor_layout.cfg
@@ -17,8 +17,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scenes/emerald.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/")
+dock_filesystem_selected_paths=PackedStringArray("res://")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -26,16 +26,16 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://main.tscn", "res://scenes/main_char.tscn", "res://scenes/emerald.tscn")
-current_scene="res://main.tscn"
+current_scene="res://scenes/main_char.tscn"
 center_split_offset=-396
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=0
+selected_bottom_panel_item=9
 
 [ScriptEditor]
 
 open_scripts=["res://scenes/emerald.gd", "res://game_manager.gd", "res://scenes/main_char.gd"]
-selected_script="res://game_manager.gd"
+selected_script="res://scenes/main_char.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
