--- a/pauline's-date/.godot/editor/editor_layout.cfg
+++ b/pauline's-date/.godot/editor/editor_layout.cfg
@@ -2,7 +2,7 @@
 
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_floating={}
 dock_bottom=[]
 dock_closed=[]
@@ -17,27 +17,26 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
+dock_filesystem_selected_paths=PackedStringArray("res://scenes/main_char.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/", "res://dialogue/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://main.tscn", "res://scenes/main_char.tscn", "res://scenes/emerald.tscn")
-current_scene="res://scenes/main_char.tscn"
+open_scenes=PackedStringArray("res://main.tscn", "res://scenes/mc_npc.tscn")
+current_scene="res://scenes/mc_npc.tscn"
 center_split_offset=-396
-selected_default_debugger_tab_idx=0
+selected_default_debugger_tab_idx=1
 selected_main_editor_idx=2
-selected_bottom_panel_item=9
 
 [ScriptEditor]
 
-open_scripts=["res://scenes/emerald.gd", "res://game_manager.gd", "res://scenes/main_char.gd"]
-selected_script="res://scenes/main_char.gd"
+open_scripts=["res://dialogue/dialogue.json", "res://scenes/emerald.gd", "res://scenes/game_manager.gd", "res://scenes/main_char.gd", "res://scenes/mc_npc.gd"]
+selected_script="res://scenes/mc_npc.gd"
 open_help=[]
-script_split_offset=70
+script_split_offset=390
 list_split_offset=0
 zoom_factor=1.0
 
